--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <li>
             <a>Coraline</a>
         </li>
+        <li>
+            <a>história</a>
+        </li>
+        <li>
+            <a>sobre o filme</a>
+        </li>
     </ul>
  </nav> 
 </body>
