--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
  <nav>
     <ul>
         <li>
-            <a>Coraline</a>
+            <a href="index.html">Coraline</a>
         </li>
         <li>
-            <a>história</a>
+            <a href="project.html">história</a>
         </li>
         <li>
-            <a>sobre o filme</a>
+            <a href="contact.html">sobre o filme</a>
         </li>
     </ul>
  </nav> 
