--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <a href="contact.html">sobre o filme</a>
         </li>
     </ul>
- </nav> 
+ </nav>
+ 
+ <header>
+    <img src="./img/coraline-cinemas.webp"
+ </header>
 </body>
 </html>
