--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
  </nav>
  
  <header>
-    <img src="./img/coraline-cinemas.webp"
+    <div class="center">
+        <img src="./img/coraline-cinemas.webp"
+    </div>
+    <h1>Coraline</h1>
+    <h2>e o mundo secreto</h2>
  </header>
+
+ <main>
+    <section>
+        <h3>sobre o filme</h3>
+        <p>Coraline Jones (Dakota Fanning), de 11 anos, é uma menina curiosa, inquieta e cheia de imaginação, que acaba de se mudar com os pais para um antigo casarão. Insatisfeita com a mudança, por ter perdido o contato com seus amigos, e chateada por não receber tanta atenção dos seus pais, que são muito ocupados e dedicados as suas tarefas, Coraline decide explorar o novo lar. É nesse momento que ela abre uma determinada porta fechada por tijolos. Mas, durante a noite, a garota é levada por um camundongo até essa porta, e dessa vez descobre um portal para um universo paralelo ao seu.
+
+            Ao contrário do mundo acinzentado e apagado da sua realidade, os tons desse outro universo são mais coloridos e mais vibrantes, representando também a emoção que a personagem sente quando está nos dois lugares. Coraline encontra os seus outros pais que são extremamente atenciosos com ela. A menina recebe muito carinho e comidas deliciosas em um ambiente mágico. Tudo seria perfeito se não fosse por uma característica intrigante e bizarra: todos que vivem nesse lugar possuem botões pretos no lugar dos olhos.
+            
+            Desde o início da história, Coraline é constantemente vigiada por uma boneca igual a ela, e adivinha: o brinquedo também tinha olhos de botões. No decorrer de sua aventura, a personagem é acompanhada por um gato (Keith David) capaz de falar apenas no universo paralelo. Em meio ao dilema sobre qual mundo ficar, Coraline descobre que a outra mãe (Teri Hatcher) é na verdade uma criatura assustadora conhecida como “A Bela Dama”. Mesmo assim, ela não se intimida e a enfrenta com muita coragem.</p>
+    </section>
+ </main>
 </body>
 </html>
