--- a/index.html
+++ b/index.html
@@ -41,13 +41,17 @@
     <section>
         <h3>final</h3>
         <p>O globo de neve em casa é quebrado e Coraline reencontra seus pais. Eles não se lembram da provação, mas tendo terminado sua escrita, eles são agradáveis para Coraline. Sua mãe compra as luvas que ela sempre quis e eles planejam uma festa no jardim. Naquela noite, os fantasmas libertos avisam Coraline que o Beldam está tentando pegar a chave da pequena porta. Quando Coraline vai até o poço para se livrar dele, a mão decepada de Beldam a ataca, tentando puxá-la de volta para a pequena porta da casa. Wybie vem em socorro e destrói a mão com uma grande pedra, para que eles possam finalmente se livrar da chave. No dia seguinte, todos os moradores dos apartamentos do Palácio Rosa vêm para a festa. Wybie traz sua avó, para que Coraline possa revelar o destino de sua irmã desaparecida.
-            
+
     </section>
     <section>
         <h3>resumo</h3>
         <p>Entediada em sua nova casa, Coraline encontra uma porta secreta. Através dela tem acesso a uma outra versão de sua própria vida, só que melhor. Mas logo descobre que há algo de errado quando seus pais alternativos tentam aprisioná-la neste novo mundo.
     </section>
     
- </main>
+       </main>
+
+       <footer>
+        <a href="">
+       </footer>
 </body>
 </html>
