--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@
        </main>
 
        <footer>
-        <a href="">
+        <a href="https://github.com/nicoly2509" target="_blank" rel="noopener noreferrer">
+            <img src="./img/github.png"></img>
+            <p>github</p>
+            </a>
+        <a href="https://vercel.com/nicolys-projects-0b900816" target="_blank" rel="noopener noreferrer">
+            <img src="./img/vercel.png"></img>
+            <p>vercel</p>
+            </a>
+       <a href="https://scratch.mit.edu/" target="_blank" rel="noopener noreferrer">
+            <img src="./img/scratch.png"></img>
+            <p>scratch</p>
+            </a>
        </footer>
 </body>
 </html>
