--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container"
  <nav>
     <ul>
         <li>
@@ -64,5 +65,9 @@
             <p>scratch</p>
             </a>
        </footer>
+    </div>
+         </a>
+        </footer>
 </body>
+
 </html>
